@@ -105,7 +105,7 @@ main (int argc, char *argv[])
 		case 'V':
 			//0.9.53 birthday message
 			printf ("EDA edition \"Summer '15 release 0.9.53\"\n");
-			//printf ("%s\n", long_version_string);
+			printf ("%s\n", long_version_string);
 			printf ("\n\
 Copyright 2003-2016 Attila Gy. Molnar.\n\
 \n\
