@@ -1,4 +1,6 @@
 
+    - some changes done, other feature branches started; see ChangeLog or the code
+
 * 2015 preparation for the EDA edition "Summer '15 release 0.9.53"
 
 * 2014 December - 2015 January (0.9.47)
